fix layout section toolbar overflow inside collapsible sections

--- a/automad/src/client/admin/styles/components/editor/blocks/collapsible-section.less
+++ b/automad/src/client/admin/styles/components/editor/blocks/collapsible-section.less
@@ -97,12 +97,14 @@
 	& ::details-content {
 		transition:
 			height 0.3s ease,
-			content-visibility 0.3s ease allow-discrete;
+			content-visibility 0.3s ease allow-discrete,
+			overflow 0.3s ease allow-discrete;
 		height: 0;
 		overflow: clip;
 	}
 
 	& [open]::details-content {
 		height: auto;
+		overflow: visible;
 	}
 }
